--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/Index.cshtml
@@ -121,7 +121,7 @@
         <div class="Plan_CInfo">
             <div class="CZ_hdtit" onclick="location.href='/Record/OpenRecord/?lType=@lType'">
                 <dl class="CZ_hdMain">
-                    <dt><a href="javascript:;"><img src="~/images/@ViewBag.Icon"></a></dt>
+                    <dt><a href="javascript:;"><img src="@ViewBag.Icon"></a></dt>
                     <dd>
                         <div class="hdM_ddtit">
                             <h3 class="hdM_ddtqi f-l">第<span id="txtIssue">@ViewBag.lastIssue</span>期</h3>
