--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewIndex.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewIndex.cshtml
@@ -144,7 +144,7 @@
         <div class="Plan_CInfo">
             <div class="CZ_hdtit" onclick="location.href='/Record/OpenRecord/?lType=@ViewBag.ChildlType'">
                 <dl class="CZ_hdMain">
-                    <dt><a href="javascript:;"><img src="~/images/@ViewBag.icon"></a></dt>
+                    <dt><a href="javascript:;"><img src="@ViewBag.icon"></a></dt>
                     <dd>
                         <div class="hdM_ddtit">
                             <h3 class="hdM_ddtqi f-l">第<span id="txtIssue">------</span>期</h3>
