--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Look.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Look.cshtml
@@ -40,7 +40,7 @@
     <div class="Plan_header" style="margin-top: 50px;">
 
         <dl class="Plan_hdCZ">
-            <dt><img src="/images/@ViewBag.icon"></dt>
+            <dt><img src="@ViewBag.icon"></dt>
             <dd>
                 <div class="hdM_ddtit">
                     <h3 class="hdM_ddtqi f-l">
