--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Plan.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Plan.cshtml
@@ -79,12 +79,12 @@
                 @for (int i = 0; i < lTypeArr.Length; i++)
                 {
                     int j = lTypeArr[i];
-                    string logo = Util.GetLotteryIcon(j) + ".png";
+                    string logo = Util.GetLotteryIcon(j);
 
                     <li>
                         <div class="UL2_hd">
                             <a href="/Plan/Index/@j">
-                                <div class="UL2_hdtu f-l"><img src="/images/@logo"></div>
+                                <div class="UL2_hdtu f-l"><img src="@logo"></div>
                                 <div class="UL2_hdtit">
                                     <h3>@Util.GetLotteryTypeName(j)</h3>
                                 </div>
