--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Index.cshtml
@@ -99,7 +99,7 @@
             <div class="Plan_CIfBox">
                 <div class="CZ_hdtit">
                     <dl class="CZ_hdMain">
-                        <dt><a href="javascript:;"><img src="/images/@ViewBag.icon"></a></dt>
+                        <dt><a href="javascript:;"><img src="@ViewBag.icon"></a></dt>
                         <dd>
                             <div class="hdM_ddtit">
                                 <h3 class="hdM_ddtqi f-l">
