--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/MyPlan.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/MyPlan.cshtml
@@ -83,7 +83,7 @@
             <div style="clear:both;"></div>
         </div>
     </div>
-    <script type="text/javascript" src="/js/luo/plan.myplan.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/luo/plan.myplan.js"></script>
 </body>
 
 @{Html.RenderAction("index", "PvUvIp");}
