--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/Index.cshtml
@@ -96,7 +96,7 @@
         <ul class="Per_listUl">
             <li>
                 <a href="/Personal/Task">
-                    <div class="Per_listtu f-l"><img src="~/images/39_9.png"></div>
+                    <div class="Per_listtu f-l"><img src="@ViewBag.osshost/images/39_9.png"></div>
                     <div class="Per_listRight">
                         <h3>赚钱任务</h3>
                         <i></i>
@@ -106,7 +106,7 @@
             </li>
             <li>
                 <a href="/Personal/TransactionRecord">
-                    <div class="Per_listtu f-l"><img src="~/images/39_2.png"></div>
+                    <div class="Per_listtu f-l"><img src="@ViewBag.osshost/images/39_2.png"></div>
                     <div class="Per_listRight">
                         <h3>交易记录</h3>
                         <i></i>
@@ -116,7 +116,7 @@
             </li>
             <li>
                 <a href="/Personal/MyCommission">
-                    <div class="Per_listtu f-l"><img src="~/images/39_3.png"></div>
+                    <div class="Per_listtu f-l"><img src="@ViewBag.osshost/images/39_3.png"></div>
                     <div class="Per_listRight">
                         <h3>我的佣金</h3>
                         <i></i>
@@ -126,7 +126,7 @@
             </li>
             <li>
                 <a href="/Personal/TakeBet">
-                    <div class="Per_listtu f-l"><img src="~/images/39_4.png"></div>
+                    <div class="Per_listtu f-l"><img src="@ViewBag.osshost/images/39_4.png"></div>
                     <div class="Per_listRight">
                         <h3>参与竞猜</h3>
                         <i></i>
@@ -138,7 +138,7 @@
         <ul class="Per_listUl">
             <li>
                 <a href="/Personal/MyPlan">
-                    <div class="Per_listtu f-l"><img src="~/images/39_5.png"></div>
+                    <div class="Per_listtu f-l"><img src="@ViewBag.osshost/images/39_5.png"></div>
                     <div class="Per_listRight">
                         <h3>我的计划</h3>
                         <i></i>
@@ -148,7 +148,7 @@
             </li>
             <li>
                 <a href="/Personal/MyAchievement">
-                    <div class="Per_listtu f-l"><img src="~/images/39_7.png"></div>
+                    <div class="Per_listtu f-l"><img src="@ViewBag.osshost/images/39_7.png"></div>
                     <div class="Per_listRight">
                         <h3>我的成绩</h3>
                         <i></i>
@@ -158,7 +158,7 @@
             </li>
             <li>
                 <a href="/Personal/Notice">
-                    <div class="Per_listtu f-l"><img src="~/images/39_8.png"></div>
+                    <div class="Per_listtu f-l"><img src="@ViewBag.osshost/images/39_8.png"></div>
                     <div class="Per_listRight">
                         <h3>
                             消息提醒
@@ -178,7 +178,7 @@
             </li>
             <li>
                 <a href="/Personal/InvitationReg">
-                    <div class="Per_listtu f-l"><img src="~/images/40_8.png"></div>
+                    <div class="Per_listtu f-l"><img src="@ViewBag.osshost/images/40_8.png"></div>
                     <div class="Per_listRight">
                         <h3>邀请注册</h3>
                         <i></i>
