--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/CommissionRules.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/CommissionRules.cshtml
@@ -39,8 +39,8 @@
             <p>系统根据用户在每个彩种参与竞猜所扣除的积分值进行判断，如单个彩种所有玩法原有所获得的积分值被扣除为低于100时将自动降级为普通玩家。</p>
         </div>
         <div class="GZ_tInfo" style="display:none;">
-            <p>1、“我的佣金”指的当用户成为收费专家后参与发布竞猜贴，被其他用户付费点阅后可获得百分之五十的佣金收入，这部分收入的金币可进行提现。</p>
-            <p>2、“我的佣金”还包括被打赏的收入，指的是当用户参与竞猜发布竞猜贴，被其他用户支付金币打赏，可获得百分之六十的收入，这部分收入与佣金收入合并的金币可进行提现。</p>
+            <p>1、“我的佣金”指的当用户成为收费专家后参与发布竞猜贴，被其他用户付费点阅后可获得百分之五十的佣金收入，这部分收入的金币自动转化成佣金（人民币）。</p>
+            <p>2、“我的佣金”还包括被打赏的收入，指的是当用户参与竞猜发布竞猜贴，被其他用户支付金币打赏，可获得百分之六十的收入，这部分收入与佣金收入合并后可进行提现。</p>
         </div>
         <div class="GZ_tInfo" style="display:none;">
             <p>打赏我的说明打赏我的说明打赏我的说明打赏我的说明打赏我的说明打赏我的说明打赏我的说明打赏我的说明打赏我的说明</p>
