--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Rule.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Rule.cshtml
@@ -2641,6 +2641,315 @@
             </table>
         </div>
     }
+    else if (lType == 63)
+    {
+        <div class="Rule_box" style="@show">
+            <h3 class="Rule_title">北京赛车PK10玩法规则说明:</h3>
+            <p class="Rule_font1">玩法分类</p>
+            <p class="Rule_font1">（一）第一球  单双  </p>
+            <p class="Rule_font1">（二）第一球  大小</p>
+            <p class="Rule_font2">选中的号码球中1-5为小，6-10为大。</p>
+            <p class="Rule_font1">（三）第一球  五码</p>
+            <p class="Rule_font1">（四）第一球  龙虎</p>
+            <p class="Rule_font1">龙虎：</p>
+            <p class="Rule_font2">冠　军 龙/虎：“第一名”车号大于“第十名”车号视为【龙】中奖、反之小于视为【虎】中奖，其余情形视为不中奖。</p>
+            <p class="Rule_font2">亚　军 龙/虎：“第二名”车号大于“第九名”车号视为【龙】中奖、反之小于视为【虎】中奖，其余情形视为不中奖。</p>
+            <p class="Rule_font2">第三名 龙/虎：“第三名”车号大于“第八名”车号视为【龙】中奖、反之小于视为【虎】中奖，其余情形视为不中奖。</p>
+            <p class="Rule_font2">第四名 龙/虎：“第四名”车号大于“第七名”车号视为【龙】中奖、反之小于视为【虎】中奖，其余情形视为不中奖。</p>
+            <p class="Rule_font2">第五名 龙/虎：“第五名”车号大于“第六名”车号视为【龙】中奖、反之小于视为【虎】中奖，其余情形视为不中奖。</p>
+            <p class="Rule_font1">（五）第二球  单双 </p>
+            <p class="Rule_font1">（六）第二球  大小</p>
+            <p class="Rule_font1">（七）第二球  五码</p>
+            <p class="Rule_font1">（八）第二球  龙虎</p>
+            <p class="Rule_font1">（九）第三球  单双</p>
+            <p class="Rule_font1">（十）第三球  大小</p>
+            <p class="Rule_font1">（十一）第三球  五码</p>
+            <p class="Rule_font1">（十二）第三球  龙虎</p>
+            <p class="Rule_font1">（十三）第四球  单双</p>
+            <p class="Rule_font1">（十四）第四球  大小</p>
+            <p class="Rule_font1">（十五）第四球  五码</p>
+            <p class="Rule_font1">（十六）第四球  龙虎</p>
+            <p class="Rule_font1">（十七）第五球  单双</p>
+            <p class="Rule_font1">（十八）第五球  大小</p>
+            <p class="Rule_font1">（十九）第五球  五码 </p>
+            <p class="Rule_font1">（二十）第五球  龙虎</p>
+            <p class="Rule_font1">（二十一）第六球  单双 </p>
+            <p class="Rule_font1">（二十二）第六球  大小 </p>
+            <p class="Rule_font1">（二十三）第六球  五码</p>
+            <p class="Rule_font1">（二十四）第七球  单双</p>
+            <p class="Rule_font1">（二十五）第七球  大小</p>
+            <p class="Rule_font1">（二十六）第七球  五码</p>
+            <p class="Rule_font1">（二十七）第八球  单双</p>
+            <p class="Rule_font1">（二十八）第八球  大小</p>
+            <p class="Rule_font1">（二十九）第八球  五码</p>
+            <p class="Rule_font1">（三十）第九球  单双</p>
+            <p class="Rule_font1">（三十一）第九球  大小</p>
+            <p class="Rule_font1">（三十二）第九球  五码</p>
+            <p class="Rule_font1">（三十三）第十球  单双</p>
+            <p class="Rule_font1">（三十四）第十球  大小</p>
+            <p class="Rule_font1">（三十五）第十球  五码 </p>
+            <p class="Rule_font1">（三十六）冠亚单双</p>
+            <p class="Rule_font2">冠亚和单双 ：“冠亚和值”为单视为投注“单”的注单视为中奖，为双视为投注“双”的注单视为中奖，其余视为不中奖。</p>
+            <p class="Rule_font1">（三十七）冠亚大小</p>
+            <br>
+            <h3 class="Rule_title">北京赛车PK10玩法积分规则:</h3>
+            <table width="100%" border="1" bordercolor="#999" class="Rule_tableA">
+                <tr>
+                    <th width="25%" align="center" valign="middle" scope="col">北京赛车PK10</th>
+                    <th width="25%" align="center" valign="middle" scope="col">中</th>
+                    <th width="25%" align="center" valign="middle" scope="col">不中</th>
+                    <th width="25%" align="center" valign="middle" scope="col">备注</th>
+                </tr>
+                <tr>
+                    <th align="center" valign="middle" scope="row">第一球单双</th>
+                    <td align="center" valign="middle">+10</td>
+                    <td align="center" valign="middle">-10</td>
+                    <td align="center" valign="middle">&nbsp;</td>
+                </tr>
+                <tr>
+                    <th align="center" valign="middle" scope="row">第一球大小</th>
+                    <td align="center" valign="middle">+10</td>
+                    <td align="center" valign="middle">-10</td>
+                    <td align="center" valign="middle">&nbsp;</td>
+                </tr>
+                <tr>
+                    <th align="center" valign="middle" scope="row">第一球五码</th>
+                    <td align="center" valign="middle">+10</td>
+                    <td align="center" valign="middle">-10</td>
+                    <td align="center" valign="middle">&nbsp;</td>
+                </tr>
+                <tr>
+                    <th align="center" valign="middle" scope="row">第一球龙虎</th>
+                    <td align="center" valign="middle">+10</td>
+                    <td align="center" valign="middle">-10</td>
+                    <td align="center" valign="middle">&nbsp;</td>
+                </tr>
+                <tr>
+                    <th align="center" valign="middle" scope="row">第二球单双</th>
+                    <td align="center" valign="middle">+10</td>
+                    <td align="center" valign="middle">-10</td>
+                    <td align="center" valign="middle">&nbsp;</td>
+                </tr>
+                <tr>
+                    <th align="center" valign="middle" scope="row">第二球大小</th>
+                    <td align="center" valign="middle">+10</td>
+                    <td align="center" valign="middle">-10</td>
+                    <td align="center" valign="middle">&nbsp;</td>
+                </tr>
+                <tr>
+                    <th align="center" valign="middle" scope="row">第二球五码</th>
+                    <td align="center" valign="middle">+10</td>
+                    <td align="center" valign="middle">-10</td>
+                    <td align="center" valign="middle">&nbsp;</td>
+                </tr>
+                <tr>
+                    <th align="center" valign="middle" scope="row">第二球龙虎</th>
+                    <td align="center" valign="middle">+10</td>
+                    <td align="center" valign="middle">-10</td>
+                    <td align="center" valign="middle">&nbsp;</td>
+                </tr>
+                <tr>
+                    <th align="center" valign="middle" scope="row">第三球单双</th>
+                    <td align="center" valign="middle">+10</td>
+                    <td align="center" valign="middle">-10</td>
+                    <td align="center" valign="middle">&nbsp;</td>
+                </tr>
+                <tr>
+                    <th align="center" valign="middle" scope="row">第三球大小</th>
+                    <td align="center" valign="middle">+10</td>
+                    <td align="center" valign="middle">-10</td>
+                    <td align="center" valign="middle">&nbsp;</td>
+                </tr>
+                <tr>
+                    <th align="center" valign="middle" scope="row">第三球五码</th>
+                    <td align="center" valign="middle">+10</td>
+                    <td align="center" valign="middle">-10</td>
+                    <td align="center" valign="middle">&nbsp;</td>
+                </tr>
+                <tr>
+                    <th align="center" valign="middle" scope="row">第三球龙虎</th>
+                    <td align="center" valign="middle">+10</td>
+                    <td align="center" valign="middle">-10</td>
+                    <td align="center" valign="middle">&nbsp;</td>
+                </tr>
+                <tr>
+                    <th align="center" valign="middle" scope="row">第四球单双</th>
+                    <td align="center" valign="middle">+10</td>
+                    <td align="center" valign="middle">-10</td>
+                    <td align="center" valign="middle">&nbsp;</td>
+                </tr>
+                <tr>
+                    <th align="center" valign="middle" scope="row">第四球大小</th>
+                    <td align="center" valign="middle">+10</td>
+                    <td align="center" valign="middle">-10</td>
+                    <td align="center" valign="middle">&nbsp;</td>
+                </tr>
+                <tr>
+                    <th align="center" valign="middle" scope="row">第四球五码</th>
+                    <td align="center" valign="middle">+10</td>
+                    <td align="center" valign="middle">-10</td>
+                    <td align="center" valign="middle">&nbsp;</td>
+                </tr>
+                <tr>
+                    <th align="center" valign="middle" scope="row">第四球龙虎</th>
+                    <td align="center" valign="middle">+10</td>
+                    <td align="center" valign="middle">-10</td>
+                    <td align="center" valign="middle">&nbsp;</td>
+                </tr>
+                <tr>
+                    <th align="center" valign="middle" scope="row">第五球单双</th>
+                    <td align="center" valign="middle">+10</td>
+                    <td align="center" valign="middle">-10</td>
+                    <td align="center" valign="middle">&nbsp;</td>
+                </tr>
+                <tr>
+                    <th align="center" valign="middle" scope="row">第五球大小</th>
+                    <td align="center" valign="middle">+10</td>
+                    <td align="center" valign="middle">-10</td>
+                    <td align="center" valign="middle">&nbsp;</td>
+                </tr>
+                <tr>
+                    <th align="center" valign="middle" scope="row">第五球五码</th>
+                    <td align="center" valign="middle">+10</td>
+                    <td align="center" valign="middle">-10</td>
+                    <td align="center" valign="middle">&nbsp;</td>
+                </tr>
+                <tr>
+                    <th align="center" valign="middle" scope="row">第五球龙虎</th>
+                    <td align="center" valign="middle">+10</td>
+                    <td align="center" valign="middle">-10</td>
+                    <td align="center" valign="middle">&nbsp;</td>
+                </tr>
+                <tr>
+                    <th align="center" valign="middle" scope="row">第六球单双</th>
+                    <td align="center" valign="middle">+10</td>
+                    <td align="center" valign="middle">-10</td>
+                    <td align="center" valign="middle">&nbsp;</td>
+                </tr>
+                <tr>
+                    <th align="center" valign="middle" scope="row">第六球大小</th>
+                    <td align="center" valign="middle">+10</td>
+                    <td align="center" valign="middle">-10</td>
+                    <td align="center" valign="middle">&nbsp;</td>
+                </tr>
+                <tr>
+                    <th align="center" valign="middle" scope="row">第六球五码</th>
+                    <td align="center" valign="middle">+10</td>
+                    <td align="center" valign="middle">-10</td>
+                    <td align="center" valign="middle">&nbsp;</td>
+                </tr>
+                <tr>
+                    <th align="center" valign="middle" scope="row">第七球单双</th>
+                    <td align="center" valign="middle">+10</td>
+                    <td align="center" valign="middle">-10</td>
+                    <td align="center" valign="middle">&nbsp;</td>
+                </tr>
+                <tr>
+                    <th align="center" valign="middle" scope="row">第七球大小</th>
+                    <td align="center" valign="middle">+10</td>
+                    <td align="center" valign="middle">-10</td>
+                    <td align="center" valign="middle">&nbsp;</td>
+                </tr>
+                <tr>
+                    <th align="center" valign="middle" scope="row">第七球五码</th>
+                    <td align="center" valign="middle">+10</td>
+                    <td align="center" valign="middle">-10</td>
+                    <td align="center" valign="middle">&nbsp;</td>
+                </tr>
+                <tr>
+                    <th align="center" valign="middle" scope="row">第八球单双</th>
+                    <td align="center" valign="middle">+10</td>
+                    <td align="center" valign="middle">-10</td>
+                    <td align="center" valign="middle">&nbsp;</td>
+                </tr>
+                <tr>
+                    <th align="center" valign="middle" scope="row">第八球大小</th>
+                    <td align="center" valign="middle">+10</td>
+                    <td align="center" valign="middle">-10</td>
+                    <td align="center" valign="middle">&nbsp;</td>
+                </tr>
+                <tr>
+                    <th align="center" valign="middle" scope="row">第八球五码</th>
+                    <td align="center" valign="middle">+10</td>
+                    <td align="center" valign="middle">-10</td>
+                    <td align="center" valign="middle">&nbsp;</td>
+                </tr>
+                <tr>
+                    <th align="center" valign="middle" scope="row">第九球单双</th>
+                    <td align="center" valign="middle">+10</td>
+                    <td align="center" valign="middle">-10</td>
+                    <td align="center" valign="middle">&nbsp;</td>
+                </tr>
+                <tr>
+                    <th align="center" valign="middle" scope="row">第九球大小</th>
+                    <td align="center" valign="middle">+10</td>
+                    <td align="center" valign="middle">-10</td>
+                    <td align="center" valign="middle">&nbsp;</td>
+                </tr>
+                <tr>
+                    <th align="center" valign="middle" scope="row">第九球五码</th>
+                    <td align="center" valign="middle">+10</td>
+                    <td align="center" valign="middle">-10</td>
+                    <td align="center" valign="middle">&nbsp;</td>
+                </tr>
+                <tr>
+                    <th align="center" valign="middle" scope="row">第十球单双</th>
+                    <td align="center" valign="middle">+10</td>
+                    <td align="center" valign="middle">-10</td>
+                    <td align="center" valign="middle">&nbsp;</td>
+                </tr>
+                <tr>
+                    <th align="center" valign="middle" scope="row">第十球大小</th>
+                    <td align="center" valign="middle">+10</td>
+                    <td align="center" valign="middle">-10</td>
+                    <td align="center" valign="middle">&nbsp;</td>
+                </tr>
+                <tr>
+                    <th align="center" valign="middle" scope="row">第十球五码</th>
+                    <td align="center" valign="middle">+10</td>
+                    <td align="center" valign="middle">-10</td>
+                    <td align="center" valign="middle">&nbsp;</td>
+                </tr>
+                <tr>
+                    <th align="center" valign="middle" scope="row">冠亚单双</th>
+                    <td align="center" valign="middle">+10</td>
+                    <td align="center" valign="middle">-10</td>
+                    <td align="center" valign="middle">&nbsp;</td>
+                </tr>
+                <tr>
+                    <th align="center" valign="middle" scope="row">冠亚大小</th>
+                    <td align="center" valign="middle">+10</td>
+                    <td align="center" valign="middle">-10</td>
+                    <td align="center" valign="middle">&nbsp;</td>
+                </tr>
+                <tr>
+                    <th align="center" valign="middle" scope="row">连中2期</th>
+                    <td align="center" valign="middle">+1</td>
+                    <td align="center" valign="middle">&nbsp;</td>
+                    <td align="center" valign="middle">&nbsp;</td>
+                </tr>
+                <tr>
+                    <th align="center" valign="middle" scope="row">连中3期</th>
+                    <td align="center" valign="middle">+2</td>
+                    <td align="center" valign="middle">&nbsp;</td>
+                    <td align="center" valign="middle">&nbsp;</td>
+                </tr>
+                <tr>
+                    <th align="center" valign="middle" scope="row">连中4期</th>
+                    <td align="center" valign="middle">+3</td>
+                    <td align="center" valign="middle">&nbsp;</td>
+                    <td align="center" valign="middle">&nbsp;</td>
+                </tr>
+                <tr>
+                    <th align="center" valign="middle" scope="row">以此类推</th>
+                    <td align="center" valign="middle">+(N-1)</td>
+                    <td align="center" valign="middle">&nbsp;</td>
+                    <td align="center" valign="middle">&nbsp;</td>
+                </tr>
+            </table>
+
+        </div>
+    }
 </body>
 @{Html.RenderAction("index", "PvUvIp");}
 </html>
