--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/WonderfulComment.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/WonderfulComment.cshtml
@@ -88,4 +88,4 @@
     <a href="/Comment/Index/@ViewBag.ArticleId?ctype=1&type=@ViewBag.Type&refUid=@ViewBag.RefUid" class="Gues_ftFBPL">请输入您的评论</a>
 </div>
 
-@{Html.RenderAction("index", "PvUvIp");}
+@*@{Html.RenderAction("index", "PvUvIp");}*@
