--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/Gallery.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/Gallery.cshtml
@@ -123,7 +123,7 @@
     </section>
 
 
-    <script type="text/javascript" src="~/js/view.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/view.js"></script>
 
     <!--侧边栏-->
     @Html.Partial("Sidebar")
