--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/PvUvIp/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/PvUvIp/Index.cshtml
@@ -2,7 +2,7 @@
     Layout = null;
 }
 
-<script src="http://pv.sohu.com/cityjson?ie=utf-8"></script>
+<script src="https://pv.sohu.com/cityjson?ie=utf-8"></script>
 <script type="text/javascript">
     var linkCode = "@ViewBag.LinkCode";
 
