--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewsDetail.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewsDetail.cshtml
@@ -21,6 +21,7 @@
     <title>@Model.FullHead -万彩吧</title>
     <meta name="keywords" content="@newsType.SeoKeyword">
     <meta name="description" content="@newsType.SeoDescription">
+    <meta name="format-detection" content="telephone=no" />
     <link href="@ViewBag.osshost/css/jquery.emoji.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="@ViewBag.osshost/css/style.css" />
     <link rel="stylesheet" type="text/css" href="@ViewBag.osshost/css/c8-icon.css" />
