--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/TypeList.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/TypeList.cshtml
@@ -26,7 +26,7 @@
     <script type="text/javascript" src="@ViewBag.osshost/js/yjp.js"></script>
 
     <script type="text/javascript" src="@ViewBag.osshost/js/baidu-statistics.js"></script>
-    <script type="text/javascript" src="@ViewBag.osshost/js/runTime2.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/news/newsruntime.js"></script>
 </head>
 
 <body style="background:#F4F4F5;">
